# image_processor

./: CMakeLists.txt  README.md  controller.cpp  controller.h  exceptions.cpp  exceptions.h  fft.cpp  fft.h  image.cpp  image.h  image_processor.cpp  io.cpp  io.h  parser.cpp  parser.h
factories/: base_factory.cpp  base_factory.h  crop_factory.cpp  crop_factory.h  edge_factory.cpp  edge_factory.h  fft_factories.cpp  fft_factories.h  gaussian_blur_factory.cpp  gaussian_blur_factory.h  grayscale_factory.cpp  grayscale_factory.h  negative_factory.cpp  negative_factory.h  sharpening_factory.cpp  sharpening_factory.h
filters/: base_filter.cpp  base_filter.h  crop_filter.cpp  crop_filter.h  edge_filter.cpp  edge_filter.h  fft_filters.cpp  fft_filters.h  gaussian_blur_filter.cpp  gaussian_blur_filter.h  grayscale_filter.cpp  grayscale_filter.h  matrix_filter.cpp  matrix_filter.h  negative_filter.cpp  negative_filter.h  sharpening_filter.cpp  sharpening_filter.h
tests/: CMakeLists.txt  test.cpp
